[package]
name = "mathool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
eframe = "0.20.1"
strum = { version = "0.24", features = ["derive"] }
lang = { path = "./lang" }

[workspace]
members = [
    "lang",
]
